--- a/PDI-ProyectoGrpBomba/PDI-ProyectoGrpBomba/App.xaml
+++ b/PDI-ProyectoGrpBomba/PDI-ProyectoGrpBomba/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="DETECCION_INFO_FIGURAS_GEOMETRICAS_GRUPO_BOMBA_PDI_B_.App"
+﻿<Application x:Class="PDI_ProyectoGrpBomba.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DETECCION_INFO_FIGURAS_GEOMETRICAS_GRUPO_BOMBA_PDI_B_"
+             xmlns:local="clr-namespace:PDI_ProyectoGrpBomba"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
