--- a/PDI-ProyectoGrpBomba/PDI-ProyectoGrpBomba/MainWindow.xaml
+++ b/PDI-ProyectoGrpBomba/PDI-ProyectoGrpBomba/MainWindow.xaml
@@ -5,15 +5,168 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PDI_ProyectoGrpBomba"
         mc:Ignorable="d"
+        WindowStyle="None"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
+        Background="Transparent"
+        AllowsTransparency="True"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button x:Name="btnLoadImage" Content="CARGAR IMAGEN" HorizontalAlignment="Left" Margin="571,91,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnGeoShapesInfoShow" Content="SACAR INFORMACION DE FIGRAS" HorizontalAlignment="Left" Margin="571,139,0,0" VerticalAlignment="Top"/>
-        <Image x:Name="displayLoadOriginal" HorizontalAlignment="Left" Height="100" Margin="273,69,0,0" VerticalAlignment="Top" Width="100"/>
 
-        <Image x:Name="displayResultImage" HorizontalAlignment="Left" Height="100" Margin="111,91,0,0" VerticalAlignment="Top" Width="100"/>
-        <DataGrid x:Name="displayInfoDataFigures" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="156,217,97,25"/>
-        <Label Content="Deteccion de medidas de figras geometricas" HorizontalAlignment="Left" Margin="169,21,0,0" VerticalAlignment="Top" FontSize="25"/>
+    <Border CornerRadius="15" Background="#212529">
+        <Border CornerRadius="12"                    
+            BorderThickness="3"
+            Opacity="0.9">
+            <Border.BorderBrush>
+                <LinearGradientBrush StartPoint="0,7" EndPoint="1,1">
+                    <GradientStop Color="#FF07FFEE" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.BorderBrush>
+            <Grid>
+                <Button x:Name="btnClose"                          
+                            BorderThickness="0"
+                            Content="X"
+                            Foreground="White"
+                            FontSize="20"
+                            FontFamily="Montserrat"
+                            Cursor="Hand"
+                            Click="btnClose_Click" Height="28" VerticalAlignment="Top" Margin="738,7,10,0" RenderTransformOrigin="0.5,0.5" Background="#FFED1717">
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform ScaleY="1" ScaleX="-1"/>
+                            <SkewTransform/>
+                            <RotateTransform/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
 
-    </Grid>
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Background" Value="#DA34AE"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#C62DAE"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Width="35" Height="25"
+                                        CornerRadius="9"
+                                        Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+                <Button x:Name="btnMinizar"                          
+            BorderThickness="0"
+            Content="-"
+            Foreground="White"
+            FontSize="20"
+            FontFamily="Montserrat"
+            Cursor="Hand"
+            Height="28" VerticalAlignment="Top" Margin="694,7,56,0" RenderTransformOrigin="0.5,0.5" Background="#FF1AB9C5" Click="btnMinizar_Click" Width="NaN">
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform ScaleY="1" ScaleX="-1"/>
+                            <SkewTransform/>
+                            <RotateTransform/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Background" Value="#DA34AE"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#C62DAE"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+
+                    <Button.Template>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border Width="35" Height="25"
+                        CornerRadius="9"
+                        Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center"
+                            HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+                <TextBlock Foreground="#FF03ADC5" FontSize="10" FontWeight="Bold" Margin="10,2,720,427" 
+                               Height="NaN" 
+                               Width="NaN" TextAlignment="Center"><Run Language="es-es" Text="FIG-DETECT"/></TextBlock>
+                <TextBlock Foreground="Cyan" FontSize="25" Margin="120,28,149,370" 
+            Height="NaN" 
+            Width="NaN" FontFamily="Rockwell Extra Bold" TextAlignment="Center"><Run Language="es-es" Text="Detección de Figuras Geométricas"/></TextBlock>
+
+                <TextBlock Foreground="LightCyan" FontSize="18" FontWeight="Bold" Margin="488,240,168,277" 
+                               Height="NaN" 
+                               Width="NaN"><Run Language="es-es" Text=" H O S P I T A L"/></TextBlock>
+                <Button x:Name="btnGeoShapesInfoShow" FontSize="25" Height="36" HorizontalAlignment="Left" VerticalAlignment="Top" Width="242" Margin="34,142,0,0" Click="btnGeoShapesInfoShow_Click">
+                    <Button.Content>
+                        <TextBlock FontFamily="Freestyle Script" Foreground="LightCyan" FontSize="20" Background="Transparent" Width="205" TextAlignment="Center" FontWeight="Bold">Obtener Datos Figuras</TextBlock>
+                    </Button.Content>
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Background" Value="DarkCyan"/>
+                            <Setter Property="BorderThickness" Value="2"/>
+                            <Setter Property="BorderBrush" Value="DarkCyan"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="Button">
+                                        <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="15">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#FF074848"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+                <Button x:Name="btnLoadImage" FontSize="25" Height="37" HorizontalAlignment="Left" VerticalAlignment="Top" Width="242" Margin="34,84,0,0" Click="btnLoadImage_Click">
+                    <Button.Content>
+                        <TextBlock FontFamily="Freestyle Script" Foreground="LightCyan" FontSize="25" Background="Transparent" Width="183" TextAlignment="Center" FontWeight="Bold">Cargar Imagen</TextBlock>
+                    </Button.Content>
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Background" Value="DarkCyan"/>
+                            <Setter Property="BorderThickness" Value="2"/>
+                            <Setter Property="BorderBrush" Value="DarkCyan"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="Button">
+                                        <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="15">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#FF074848"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+                <TextBlock x:Name="lblMensajes" Foreground="LightCyan" FontSize="35" FontWeight="Bold" Margin="282,269,220,136" FontFamily="Freestyle Script" Text="Información de Figuras" Height="NaN" Width="NaN" TextAlignment="Center"/>
+                <Image x:Name="displayLoadOriginal" HorizontalAlignment="Left"  Height="164" Margin="538,84,0,0" VerticalAlignment="Top" Width="178"/>
+                <Image x:Name="displayResultImage" HorizontalAlignment="Left" Height="164" Margin="297,84,0,0" VerticalAlignment="Top" Width="178"/>
+                <DataGrid x:Name="displayInfoDataFigures" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="128,317,128,54" Height="NaN"/>
+            </Grid>
+        </Border>
+    </Border>
 </Window>
